saves/test/demo_full_20240802_193545/dff8/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp dff8_tb.v dff8.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
dff8_tb.v:107: $finish called at 290000 (1ps)

iverilog cmd 2 error:

